# chronohorn

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  SECURITY.md  STYLE.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  pages.yml  release.yml
chronohorn/: __init__.py  __main__.py
crates/: README.md
crates/chronohorn-causal-bank/: Cargo.toml  README.md
crates/chronohorn-causal-bank/src/: checkpoint.rs  exact_experts.rs  exact_ngram_checkpoint.rs  (+4 more)
crates/chronohorn-cli/: Cargo.toml  README.md
crates/chronohorn-core/: Cargo.toml  README.md
crates/chronohorn-runtime/: Cargo.toml  README.md
crates/chronohorn-schema/: Cargo.toml  README.md
data/: .gitignore  README.md  roots.example.json
data/roots/: README.md
docker/: Dockerfile.cuda
docker/chronohorn-runner/: Dockerfile
docs/: ARCHIVE.md  ATTACK_LOOP.md  CRATE_MAP.md  DOCTRINE.md  FLEET.md  FRONTIER_QUEUE.md  GPU_ROADMAP.md  README.md  REPO_BOUNDARY.md  REPO_HYGIENE_PLAN.md  SCALER_FRAMEWORK.md  SESSION8_DEBT.md  STACK.md  TABLE_COMPILER.md  session11_continuation.md  session11_starting_kit.md
docs/archive/: ATTACK_LOOP.md  C3_C7_NEXT.md  CONKER_ABSORPTION_PLAN.md  README.md
examples/: ingest_results.py
manifests/: README.md  auto_depth-d1-s10_s10000.jsonl  auto_depth-d1-s12_s5000.jsonl  auto_depth-d2-s10_s10000.jsonl  auto_depth-d3-s8_s5000.jsonl  auto_depth-frozen-s12-s5000_s10000.jsonl  auto_depth-frozen-s12_s5000.jsonl  auto_sub1-cpatch4-ar-ssm128-s8_s5000.jsonl  auto_sub1-cpatch4-ar-ssm256-s6_s5000.jsonl  auto_sub1-d2-mix100-s10_s5000.jsonl  auto_sub1-d2-mix50-s10_s5000.jsonl  auto_sub1-d2-recur-mem-s10_s5000.jsonl  auto_sub1-d2-recur-s10_s5000.jsonl  auto_sub1-d3-mix50-s8_s5000.jsonl  auto_sub1-frozen-s10_s5000.jsonl  auto_sub1-hemi-patch4-ssm128-s8_s5000.jsonl  auto_sub1-hemi-ssm128-d2-s10_s5000.jsonl  auto_sub1-hemi-ssm512-s10_s5000.jsonl  auto_sub1-hemi-ssm64-s10_s5000.jsonl  auto_sub1-hemi10-ssm256-s10_s5000.jsonl  auto_sub1-hemi50-ssm256-s10_s5000.jsonl  auto_sub1-hybrid-p4-d2-s10_s5000.jsonl  auto_sub1-hybrid-p4-d2-ssm128-s8_s5000.jsonl  auto_sub1-hybrid-p4-gated-s10-s5000_s10000.jsonl  auto_sub1-hybrid-p4-gated-s10_s5000.jsonl  auto_sub1-hybrid-p4-hemi-ssm128-s8_s5000.jsonl  auto_sub1-hybrid-p4-s10_s5000.jsonl  auto_sub1-hybrid-p4-ssm128-s8_s5000.jsonl  auto_sub1-hybrid-p4-ssm256-s6_s5000.jsonl  auto_sub1-hybrid-p8-s10_s5000.jsonl  auto_sub1-patch4-recur-s8_s5000.jsonl  auto_sub1-patch4-ssm128-d2-s8_s5000.jsonl  auto_sub1-patch4-ssm256-s6_s5000.jsonl  auto_sub1-ssm128-d2-s10_s5000.jsonl  auto_sub1-ssm128-d3-s8_s5000.jsonl  auto_sub1-ssm129-s10_s5000.jsonl  auto_sub1-ssm256-d2-s10_s5000.jsonl  auto_sub1-ssm256-lr3e3-s10_s5000.jsonl  auto_sub1-ssm256-mem-s10_s5000.jsonl  auto_sub1-ssm256-osc0-s10_s5000.jsonl  (+119 more)
paper/: chronohorn_book.tex  session10_byte_frontier.tex  session10_structure_solved.tex  session6_chronohorn.tex  session7_bottleneck.tex  session7_five_papers.tex  session8_forensics_guided.tex  session8_full.tex  session9_rotation.tex
python/: README.md
python/chronohorn/: __init__.py  _entrypoints.py  _opc.py  cli.py  db.py  forecasting.py  manifest_normalization.py  manifest_paths.py  mcp.py  mcp_transport.py  metrics.py  pipeline.py  runtime.py  runtime_store.py  service_log.py  store.py
scripts/: README.md  analyze_probe_curve.py  backfill_db.py  build_ngram_table.py  build_og.py  dispatch_experiment.py  export_excel_snapshot.py  release.sh  run_attack_loop.zsh  slop_build_oracle_budgeted_table.zsh  slop_collect_remote_status.zsh  slop_run_causal_bank_from_table.zsh  train_hash_embed.py  train_polyhash.py  train_polyhash_v10.py  train_polyhash_v11.py  train_polyhash_v2.py  train_polyhash_v3.py  train_polyhash_v4.py  train_polyhash_v5.py  train_polyhash_v6.py  train_polyhash_v7.py  train_polyhash_v8.py  train_polyhash_v8h.py  train_polyhash_v8m.py
site/: 404.html  CNAME  index.html  robots.txt  sitemap.xml
site/assets/: style.css
src/: audit.rs  bridge.rs  byte_bridge.rs  checkpoint.rs  data.rs  demo.rs  export_schema.rs  lib.rs  main.rs  oracle.rs  packed_memory.rs  protocol.rs  shell_archive.rs  shell_causal_bank.rs  shell_core.rs  shell_support.rs  shell_usage.rs  token_bridge.rs  token_column_bridge.rs  token_copy_bridge.rs  token_decay_bridge.rs  token_experiment_matrix.rs  token_match_bridge.rs  token_matchcopy_bridge.rs  token_matchskip_bridge.rs  token_matchskipcopy_bridge.rs  token_signal_matrix.rs  token_skip_bridge.rs  token_skipcopy_bridge.rs  token_word_bridge.rs
src/archive/: byte_bridge.rs  legacy_bridge_report_schema.rs  mod.rs  packed_memory.rs  token_adaptive_gate.rs  token_bridge.rs  token_c3c7.rs  token_column_bridge.rs  token_conker3.rs  token_copy_bridge.rs  token_decay_bridge.rs  token_experiment_matrix.rs  token_match_bridge.rs  token_matchcopy_bridge.rs  token_matchskip_bridge.rs  token_matchskipcopy_bridge.rs  token_ngram_checkpoint.rs  token_signal_matrix.rs  token_skip_bridge.rs  token_skipcopy_bridge.rs  token_word_bridge.rs
state/: NEXT_INSTANCE_HANDOFF.md  README.md  frontier_status.json  next_instance_handoff.json
tests/: conftest.py  test_artifact_fallback.py  test_auto_deepen.py  test_bpb_calibration.py  test_causal_bank_adapter.py  test_causal_bank_benchmark.py  test_db.py  test_db_extended.py  test_drain.py  test_engine_advisor.py  test_engine_core.py  test_engine_saturation.py  test_families.py  test_fleet_daemon.py  test_fleet_dispatch.py  test_fleet_hosts.py  test_fleet_k8s.py  test_manifest_transform.py  test_mcp_fleet_tools.py  test_mcp_surface.py  test_mcp_transport.py  test_observe_terminal.py  test_patch_readout_loss.py  test_polyhash_training.py  test_polyhash_v12.py  test_result_cache.py  test_result_pullback.py  test_runtime.py  test_runtime_store.py  test_scan_consistency.py  test_security.py  test_service_log.py  test_spec_derivation.py  test_token_shard_dataset_torch.py  test_workstream_integration.py
(+150 files in other folders)
