[package]
name = "chronohorn"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
rayon = "1.10"
chronohorn-core = { path = "crates/chronohorn-core" }
chronohorn-causal-bank = { path = "crates/chronohorn-causal-bank" }
chronohorn-schema = { path = "crates/chronohorn-schema" }
chronohorn-runtime = { path = "crates/chronohorn-runtime" }

[workspace]
members = [
    "crates/chronohorn-core",
    "crates/chronohorn-causal-bank",
    "crates/chronohorn-schema",
    "crates/chronohorn-runtime",
    "crates/chronohorn-cli",
]
