[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronohorn"
version = "0.1.0"
description = "Runtime, replay, export, and frontier execution surface for predictive-coder descendants."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Chronohorn contributors"},
]
dependencies = [
  "numpy>=1.26",
  "open-predictive-coder>=0.1.0",
]
keywords = [
  "predictive-coding",
  "runtime",
  "artifact-evaluation",
  "compression",
  "sequence-modeling",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
train = [
  "sentencepiece>=0.2",
]
torch = [
  "sentencepiece>=0.2",
  "torch>=2.8",
]
metal = [
  "sentencepiece>=0.2",
  "mlx>=0.25",
]
test = [
  "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/asuramaya/chronohorn"
Repository = "https://github.com/asuramaya/chronohorn"

[project.scripts]
chronohorn = "chronohorn.cli:main"
chronohorn-mcp = "chronohorn.mcp_transport:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
