[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronohorn"
version = "0.1.0"
description = "Runtime, replay, export, and frontier execution surface for predictive-coder descendants."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Chronohorn contributors"},
]
dependencies = [
  "numpy>=1.26",
]
keywords = [
  "predictive-coding",
  "runtime",
  "artifact-evaluation",
  "compression",
  "sequence-modeling",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "decepticons @ git+https://github.com/asuramaya/decepticons.git",
]
train = [
  "sentencepiece>=0.2",
]
torch = [
  "sentencepiece>=0.2",
  "torch>=2.8",
]
cuda = [
  "sentencepiece>=0.2",
  "torch>=2.8",
  "mamba-ssm>=2.0",
  "causal-conv1d>=1.4",
]
metal = [
  "sentencepiece>=0.2",
  "mlx>=0.25",
]

[project.urls]
Homepage = "https://github.com/asuramaya/chronohorn"
Repository = "https://github.com/asuramaya/chronohorn"

[project.scripts]
chronohorn = "chronohorn.cli:main"
chronohorn-mcp = "chronohorn.mcp_transport:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["python"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "S",    # flake8-bandit (security)
]
ignore = [
  "E501",   # line length (handled by formatter)
  "S603",   # subprocess call - checked manually
  "S607",   # partial executable path
  "S101",   # assert in non-test code
  "S108",   # hardcoded temp dir
  "B905",   # zip without strict
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]
