[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronohorn"
version = "0.1.1"
description = "Family-agnostic experiment tracker and architecture-search runtime for predictive descendants."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Chronohorn contributors"},
]
dependencies = [
  "numpy>=1.26",
  "decepticons>=0.1.3",
]
keywords = [
  "predictive-coding",
  "runtime",
  "artifact-evaluation",
  "compression",
  "sequence-modeling",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]
train = [
  "sentencepiece>=0.2",
]
torch = [
  "sentencepiece>=0.2",
  "torch>=2.8",
]
cuda = [
  "sentencepiece>=0.2",
  "torch>=2.8",
  "mamba-ssm>=2.0",
  "causal-conv1d>=1.4",
]
metal = [
  "sentencepiece>=0.2",
  "mlx>=0.25",
]

[project.urls]
Homepage = "https://chronohorn.com/"
Documentation = "https://chronohorn.com/"
Repository = "https://github.com/asuramaya/chronohorn"
Issues = "https://github.com/asuramaya/chronohorn/issues"
Changelog = "https://github.com/asuramaya/chronohorn/blob/main/CHANGELOG.md"

[project.scripts]
chronohorn = "chronohorn.cli:main"
chronohorn-mcp = "chronohorn.mcp_transport:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["python"]
exclude = ["examples/"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "S",    # flake8-bandit (security)
]
ignore = [
  "E501",   # line length (handled by formatter)
  "S603",   # subprocess call - checked manually
  "S607",   # partial executable path
  "S101",   # assert in non-test code
  "S108",   # hardcoded temp dir
  "B905",   # zip without strict
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]
"chronohorn/__main__.py" = ["I001"]
"python/chronohorn/db.py" = ["B007", "E702", "F841", "I001", "S110", "S608", "SIM102", "SIM103", "SIM105", "SIM108"]
"python/chronohorn/engine/advisor.py" = ["B007", "F841"]
"python/chronohorn/engine/axis_analysis.py" = ["E701"]
"python/chronohorn/engine/forecasting.py" = ["E402", "F841"]
"python/chronohorn/engine/saturation.py" = ["F841"]
"python/chronohorn/families/causal_bank/models/quantize.py" = ["E402"]
"python/chronohorn/families/causal_bank/scan.py" = ["B028", "SIM103"]
"python/chronohorn/families/causal_bank/training/measure_backend_parity.py" = ["B007"]
"python/chronohorn/families/polyhash/models/hash_embed_model.py" = ["B007", "B008"]
"python/chronohorn/families/polyhash/models/ngram_table.py" = ["SIM108"]
"python/chronohorn/families/polyhash/models/polyhash_model.py" = ["B008"]
"python/chronohorn/families/polyhash/models/polyhash_v10.py" = ["B008", "SIM108"]
"python/chronohorn/families/polyhash/models/polyhash_v11.py" = ["B008", "E701"]
"python/chronohorn/families/polyhash/models/polyhash_v12.py" = ["B008", "E741", "F841", "SIM108"]
"python/chronohorn/families/polyhash/models/polyhash_v2.py" = ["B007", "B008", "F841", "SIM108"]
"python/chronohorn/families/polyhash/models/polyhash_v3.py" = ["B008"]
"python/chronohorn/families/polyhash/models/polyhash_v4.py" = ["B008", "F841", "SIM108"]
"python/chronohorn/families/polyhash/models/polyhash_v5.py" = ["B008"]
"python/chronohorn/families/polyhash/models/polyhash_v6.py" = ["B008", "E701", "F841", "SIM102"]
"python/chronohorn/families/polyhash/models/polyhash_v7.py" = ["B008", "E701", "E702", "SIM102"]
"python/chronohorn/families/polyhash/models/polyhash_v8.py" = ["B008", "F841", "SIM102"]
"python/chronohorn/families/polyhash/models/polyhash_v8h.py" = ["B008"]
"python/chronohorn/families/polyhash/models/polyhash_v8m.py" = ["B007", "B008", "F841"]
"python/chronohorn/families/polyhash/training/train_polyhash.py" = ["E731", "F841", "SIM102"]
"python/chronohorn/families/transformer/adapter.py" = ["SIM103"]
"python/chronohorn/fleet/cli.py" = ["SIM108"]
"python/chronohorn/fleet/daemon.py" = ["F401", "I001", "SIM105"]
"python/chronohorn/fleet/dispatch.py" = ["E402"]
"python/chronohorn/fleet/drain.py" = ["F401"]
"python/chronohorn/fleet/drain_cli.py" = ["SIM105", "SIM115"]
"python/chronohorn/fleet/forecast_results.py" = ["E402"]
"python/chronohorn/fleet/hosts.py" = ["F401", "SIM103"]
"python/chronohorn/fleet/k8s.py" = ["S324"]
"python/chronohorn/fleet/manifest_transform.py" = ["F841"]
"python/chronohorn/fleet/planner.py" = ["SIM103"]
"python/chronohorn/manifest_normalization.py" = ["S105", "SIM102"]
"python/chronohorn/mcp.py" = ["S608"]
"python/chronohorn/observe/cli.py" = ["S608"]
"python/chronohorn/observe/serve.py" = ["SIM108"]
"python/chronohorn/observe/terminal.py" = ["SIM108"]
"scripts/dispatch_experiment.py" = ["E402", "I001"]
"scripts/export_excel_snapshot.py" = ["I001", "S608"]
"scripts/train_hash_embed.py" = ["I001"]
"tests/test_drain.py" = ["I001"]
"tests/test_engine_core.py" = ["B011", "S110"]
"tests/test_scan_consistency.py" = ["F841", "I001"]
